mettail-macros/tests/compile_fail/unknown_constructor.stderr
error: expected identifier
  --> tests/compile_fail/unknown_constructor.rs:13:31
   |
13 |         NQuote . Name ::= "@" (Proc) ;
   |                               ^
